<resources>
    <string name="app_name">DoctorPlus</string>
    <string name="Logo">LogoApp</string>
    <string name="id_number">identification number</string>
    <string name="Password">Contraseña</string>
    <string name="Imagen_Pildoras">pills</string>
    <string name="ButtonMedication">Medication</string>
    <string name="btnBuscarMedicamento">Buscar com.example.doctorplus.Medicamento</string>
    <string name="button">Button</string>
    <string name="Button">Buscar Medicamento</string>
    <string name="buscar_medicamento">Buscar Medicamento</string>
    <string name="TextoNombre">Nombre</string>
    <string name="TextNombre">Nombre Usuario</string>
    <string name="TextoIdentificacion1">Nombre</string>
    <string name="Id">IdUsuario</string>
    <string name="TextViewId" />
    <string name="TextId">Id Usuario</string>
    <string name="IconApp">icon</string>
    <string name="Nombre">NombreUsuario</string>
    <string name="TextIdUsuario">Id Usuario</string>
    <string name="TextRol">Rol</string>
    <string name="TextoNombreUsuario">Nombre Usuario</string>
    <string name="TextRolUsuario">Rol Usuario</string>
    <string name="TextoRol">Rol Usuario</string>
    <string name="Rol">Rol Usuario</string>
    <string name="TextoRolUsuario">Rol Usuario</string>
    <string name="TipoRolUsuario">Rol Usuario</string>
    <string name="IdUsuario">Id</string>
    <string name="NombreUsuario">Introduzca Nombre</string>
    <string name="TextoIdUsuario">Introduzca su Id</string>
    <string name="RolUsuario">Cuál es tu Rol?</string>
    <string name="TextPregunta">Qué desea hacer?</string>
    <string name="ButtonCrea">Crear Receta</string>
    <string name="ButtonBuscar">Buscar Receta</string>
    <string name="MuestraNombre">Este es su nombre</string>
    <string name="TextoId">MuestraId</string>
    <string name="MuestraId">Esta es su Id</string>
    <string name="MuestraTextoRol">Este es tu Rol</string>
    <string name="MuestrarRol">Este es su Rol</string>
    <string name="LogoBlanco">LogoDoctorPlusBlanco</string>
    <string name="OtherUsersNombre">TextoNombre2</string>
    <string name="TextOtherUsers">Nombre</string>
    <string name="OtherUsersName">Muestra el nombre</string>
    <string name="ButtonLogin">Login</string>
    <string name="TextViewIdUsuarios">Esta es su Id</string>
    <string name="IdOtherUsers">Id</string>
    <string name="TextIdOtherUsers">Esta es su Id</string>
    <string name="TextoIdOtros">Este es su Id</string>
    <string name="TextoIdentificador2">Nombre:</string>
    <string name="IdUsuario2">Id:</string>
    <string name="TextViewRol2">Rol:</string>
    <string name="NombreUsers">Nombre:</string>
    <string name="LogoDoctor">Logo</string>
    <string name="TextNombreOtros">Nombre:</string>
    <string name="TextNameOthers">Este es su nombre</string>
    <string name="TextIdUsers">Id:</string>
    <string name="OthersId">Esta es su Id</string>
    <string name="TextRolUsers">Rol:</string>
    <string name="TextRolOthers">Este es su Rol</string>
    <string name="TextHacer">Qué desea hacer?:</string>
    <string name="ButtonReceta2">Crear Receta</string>
    <string name="TextNombre1">Este es su nombre:</string>
    <string name="TextPersonNombre">Nombre</string>
    <string name="TextViewUserId">Id</string>
    <string name="TextIdUser">Esta es su Id:</string>
    <string name="TextRolUser">Este es su Rol:</string>
    <string name="TextViewRol">Rol</string>
    <string name="TextNameOtherUsers">Nombre</string>
    <string name="TextNameOtherUser">Este es su Nombre:</string>
    <string name="TextOthersId">Esta es su Id:</string>
    <string name="TextOtherUsersId">Id</string>
    <string name="TextRolOtherUsers">Este es su Rol:</string>
    <string name="TextOtherUsersRol">Rol</string>
    <string name="LogoBlancoPequeño">LogoDoctorPlus</string>
    <string name="TextIdReceta">Id Receta:</string>
    <string name="TextViewReceta">Receta</string>
    <string name="NumberMedic">Número Usuario:</string>
    <string name="TextNumberUser">Número de Usuario:</string>
    <string name="NumberUser">Número</string>
    <string name="PacienteName">Paciente:</string>
    <string name="TextPaciente">Paciente</string>
    <string name="NumeroReceta">Escriba aquí número receta</string>
    <string name="NumeroUsuario1">Escriba su número de Usuario</string>
    <string name="NumerosReceta">Escriba números aquí</string>
    <string name="NumerosReceta1">Escriba número aquí</string>
    <string name="NumeroMedico">Escriba número aquí</string>
    <string name="NombrePaciente">Escriba aquí Nombre</string>
    <string name="TextFecha">Fecha:</string>
    <string name="TextFechaReceta">Seleccione Fecha</string>
    <string name="TextMedicamento">Medicamento:</string>
    <string name="TextMedicamento1">Escriba Medicamento</string>
    <string name="TextTomas">Tomas:</string>
    <string name="NumberTomas">Escribe número tomas</string>
    <string name="ButtonBuscar2">Buscar</string>
    <string name="ResultadoReceta">Id Receta:</string>
    <string name="TextResultadoId">Muestra Id</string>
    <string name="TextNombreUser">Muestra Número</string>
    <string name="TextNumeroUser">Número Usuario</string>
    <string name="NumberUser1">Número Usuario:</string>
    <string name="NumberUser2">Muestra número</string>
    <string name="TextViewPaciente">Paciente:</string>
    <string name="TextNombrePaciente">Muestra Nombre</string>
    <string name="TextFecha2">Fecha:</string>
    <string name="FechaDate">Muestra Fecha</string>
    <string name="TextMedicamento2">Medicamento</string>
    <string name="TextMedicamento3">Medicamento:</string>
    <string name="TextShowMedicamento">Muestra Medicamento</string>
    <string name="TextTomas2">Tomas:</string>
    <string name="TexNumeroTomas">Número de tomas</string>
    <string name="SwitchPreparada">Preparada</string>
    <string name="SwitchEntregada">Entregada</string>
    <string name="ButtonNuevaBusqueda">Nueva Búsqueda</string>
    <string name="ButtonBuscarReceta">Buscar Receta</string>
    <string name="TextIdReceta2">Id Receta:</string>
    <string name="TextMuestraId">Muestra Id</string>
    <string name="TextNumeroUsuario">Número Usuario:</string>
    <string name="TextMuestraUsuario">Muestra Usuario</string>
    <string name="TextPaciente2">Paciente:</string>
    <string name="TextViewPaciente2">Muestra Paciente</string>
    <string name="TextViewNombreUser">Este es su nombre:</string>
    <string name="TextViewId2">Esta es su Id:</string>
    <string name="TextViewRolUsers">Este es su Rol:</string>
    <string name="TextViewNombre3">Este es su nombre:</string>
    <string name="TextViewId3">Esta es su Id:</string>
    <string name="TextViewRol3">Este es su Rol:</string>
    <string name="TextViewIdReceta">Número de Receta:</string>
    <string name="TextViewNumeroUser">Número de Usuario:</string>
    <string name="TextViewPaciente3">Paciente:</string>
    <string name="TextNombrePaciente3">Escriba nombre aquí:</string>
    <string name="TextViewFecha">Fecha:</string>
    <string name="TextViewMedicamento3">Medicamento:</string>
    <string name="TextViewTomas">Tomas:</string>
    <string name="TextViewPush">Presione para buscar:</string>
    <string name="TextViewNumReceta" />
    <string name="TextViewNumReceta2">Número de Receta:</string>
    <string name="TexViewNumReceta">Esta es la receta</string>
    <string name="TextViewNumUser">Número de Usuario:</string>
    <string name="TextViewNumUser3">Este es el número:</string>
    <string name="TextViewPaciente4">Paciente:</string>
    <string name="TextViewNumUser4">Este es el número</string>
    <string name="TextViewNombrePaciente">Nombre Paciente</string>
    <string name="TextViewFecha2">Fecha:</string>
    <string name="TextViewFecha3">Esta es la Fecha</string>
    <string name="TextViewMedicamento">Medicamento:</string>
    <string name="TextViewMed">Este es el Medicamento</string>
    <string name="TextViewTomas2">Tomas:</string>
    <string name="TextViewTomas3">Estas son las tomas</string>
    <string name="TextViewEstadoReceta">Estado de la Receta</string>
    <string name="EstadoReceta2">Estado de la Receta:</string>
    <string name="TextViewNumReceta3">Número de Receta:</string>
    <string name="TextViewReceta3">Esta es la receta</string>
    <string name="TextViewUser4">Número de Usuario:</string>
    <string name="TextViewUsuario4">Número de Usuario:</string>
    <string name="TextViewUsuario5">Este es el Usuario</string>
    <string name="TextViewPaciente5">Paciente:</string>
    <string name="TextViewPaciente6">Nombre paciente</string>
    <string name="TextViewFecha4">Esta es la Fecha</string>
    <string name="TextViewFecha5">Fecha:</string>
    <string name="TextViewFecha6">Esta es la Fecha</string>
    <string name="TextViewMedicamento2">Medicamento:</string>
    <string name="TextViewMedicamento4">Este es el Medicamento</string>
    <string name="TextViewTomas4">Tomas:</string>
    <string name="TextViewTomas5">Estas son las tomas</string>
    <string name="OtherActions">Otras Acciones:</string>
    <string name="BttnNuevaBusqueda">Nueva Busqueda</string>
    <string name="TextViewBorrarReceta">Borrar Receta</string>
    <string name="BttnDeleteReceta">Borrar Receta</string>
    <string name="BttnDelReceta">Borrar Receta</string>
    <string name="BttnModificar">Modificar Receta</string>
    <string name="BttnCreate">Crear Nueva</string>
    <string name="TextMedicamento4">Escriba Medicamento</string>
    <string name="TexMedicamentos">Escriba aquí Medicamentos</string>
    <string name="LogoBlancoSimple">LogoSimpleBlanco</string>
    <string name="textViewNombre">Nombre</string>
    <string name="textViewNombreUsuario">Nombre</string>
    <string name="TextViewNumber">Número de receta asignado</string>
    <string name="TextViewNumberReceta">Este es su número de receta</string>
    <string name="TextViewAssigned">Número de receta asignado:</string>
    <string name="TextViewCreacPac">Paciente:</string>
    <string name="TextViewNombreNumeroPac">Nombre o número de paciente</string>
    <string name="TextViewFechaCreacion">Fecha:</string>
    <string name="TextViewFechaCreac">Fecha actual</string>
    <string name="TextViewMedicRecet">Medicamento recetado:</string>
    <string name="TextViewMediRecet">Medicamento Recetado:</string>
    <string name="TextViewMedRecet">Medicamento</string>
    <string name="TextViewTomasCreacion">Tomas diarias:</string>
    <string name="TextViewTomasCr">Número de tomas</string>
    <string name="TextViewNumberTomas">Número de tomas</string>
    <string name="EditTextCreateName">Nombre o número de paciente</string>
    <string name="TexDateCreat">Fecha de creación</string>
    <string name="EditTextMedName">Nombre medicamento</string>
    <string name="EditTextTomas">Tomas diarias</string>
    <string name="BttnCreateReceta">Create</string>
    <string name="EtHintPaciente">Este es el nombre</string>
    <string name="tvNumeroAsignado">Número de receta:</string>
    <string name="tvTomas">Tomas diarias:</string>
    <string name="acMedicines">medicamentos</string>
    <string name="acMedicine">Medicamentos</string>
    <string name="acMedsHint">Medicamentos</string>
    <string name="AutoCompletePatients">Datos de Paciente</string>
    <string name="AutoCompleteRecipe">Escriba número de receta</string>
    <string name="AutoCompletePatient">Escriba el nombre del paciente</string>
    <string name="AutoCompleteDate">Escriba la fecha</string>
    <string name="LogoDctrPls">LogoRewind</string>
    <string name="rbPrep">Preparada</string>
    <string name="rbEntregada">Entregada</string>
    <string name="rbCreada">Creada</string>
    <string name="tvOthers">Otras acciones:</string>
</resources>



