<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TextViewUserRol"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700">


    <TextView
        android:id="@+id/TextHacer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="400dp"
        android:layout_marginEnd="220dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/TextPregunta"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/buttonCreaReceta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="520dp"
        android:layout_marginEnd="100dp"
        android:text="@string/ButtonCrea"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/buttonBuscarReceta"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/ButtonBuscar"
        app:layout_constraintEnd_toEndOf="@+id/buttonCreaReceta"
        app:layout_constraintStart_toStartOf="@+id/buttonCreaReceta"
        app:layout_constraintTop_toBottomOf="@+id/buttonCreaReceta"
        android:onClick="onClickBuscarReceta"
        tools:ignore="VisualLintButtonSize" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="259dp"
        android:layout_height="115dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/LogoBlanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/doctor_blanco" />

    <TextView
        android:id="@+id/textViewNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/TextPersonNombre"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewNombreUsuario"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewNombreUsuario"
        app:layout_constraintTop_toBottomOf="@+id/textViewNombreUsuario"
        tools:text="@string/textViewNombre" />

    <TextView
        android:id="@+id/textViewId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/TextViewUserId"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewId3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewId3"
        app:layout_constraintTop_toBottomOf="@+id/textViewId3" />

    <TextView
        android:id="@+id/textViewRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/TextViewRol"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewRolUsers"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewRolUsers"
        app:layout_constraintTop_toBottomOf="@+id/textViewRolUsers" />

    <TextView
        android:id="@+id/textViewNombreUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:text="@string/textViewNombreUsuario"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.36"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/TextViewNombreUser" />

    <TextView
        android:id="@+id/textViewId3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/TextViewId2"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewNombre"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewNombre"
        app:layout_constraintTop_toBottomOf="@+id/textViewNombre" />

    <TextView
        android:id="@+id/textViewRolUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/TextViewRolUsers"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewId"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewId"
        app:layout_constraintTop_toBottomOf="@+id/textViewId" />


</androidx.constraintlayout.widget.ConstraintLayout>