<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="102dp"
        android:layout_height="92dp"
        android:layout_marginStart="275dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icono_blanco" />

    <TextView
        android:id="@+id/textViewNumReceta2"
        android:layout_width="165dp"
        android:layout_height="21dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="250dp"
        android:text="@string/TextViewNumReceta3"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewReceta3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/TextViewReceta3"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewNumReceta2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewNumReceta2"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumReceta2" />

    <TextView
        android:id="@+id/textViewNumUser4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/TextViewUser4"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewReceta3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewReceta3"
        app:layout_constraintTop_toBottomOf="@+id/textViewReceta3" />

    <TextView
        android:id="@+id/textViewNumUsuario4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/TextViewUsuario5"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewNumUser4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewNumUser4"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumUser4" />

    <TextView
        android:id="@+id/textViewPaciente2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/TextViewPaciente5"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewNumUsuario4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewNumUsuario4"
        app:layout_constraintTop_toBottomOf="@+id/textViewNumUsuario4" />

    <TextView
        android:id="@+id/textViewPaciente3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/TextViewPaciente6"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewPaciente2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewPaciente2"
        app:layout_constraintTop_toBottomOf="@+id/textViewPaciente2" />

    <TextView
        android:id="@+id/textViewFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/TextViewFecha5"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewPaciente3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewPaciente3"
        app:layout_constraintTop_toBottomOf="@+id/textViewPaciente3" />

    <TextView
        android:id="@+id/textViewFecha4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/TextViewFecha6"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewFecha"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewFecha"
        app:layout_constraintTop_toBottomOf="@+id/textViewFecha" />

    <TextView
        android:id="@+id/textViewMedicamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/TextViewMedicamento2"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewFecha4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewFecha4"
        app:layout_constraintTop_toBottomOf="@+id/textViewFecha4" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/TextViewMedicamento4"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewMedicamento"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewMedicamento"
        app:layout_constraintTop_toBottomOf="@+id/textViewMedicamento" />

    <TextView
        android:id="@+id/textViewTomas3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/TextViewTomas4"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView14"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <TextView
        android:id="@+id/textViewTomas5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/TextViewTomas5"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewTomas3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewTomas3"
        app:layout_constraintTop_toBottomOf="@+id/textViewTomas3" />

    <TextView
        android:id="@+id/textViewOtherActions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="250dp"
        android:layout_marginBottom="200dp"
        android:text="@string/OtherActions"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonNuevaBusqueda2"
        android:layout_width="187dp"
        android:layout_height="52dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="132dp"
        android:text="@string/BttnNuevaBusqueda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonDelReceta"
        android:layout_width="187dp"
        android:layout_height="52dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="200dp"
        android:layout_marginBottom="80dp"
        android:backgroundTint="@color/rojo"
        android:text="@string/BttnDelReceta"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonModificar"
        android:layout_width="188dp"
        android:layout_height="51dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/white"
        android:text="@string/BttnModificar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>